; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_avio.c_ffurl_alloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_avio.c_ffurl_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_PROTOCOL_NOT_FOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ffurl_alloc(i32** %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* null, i32** %10, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = call i32* @url_find_protocol(i8* %11)
  store i32* %12, i32** %10, align 8
  %13 = load i32*, i32** %10, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %4
  %16 = load i32**, i32*** %6, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @url_alloc_for_protocol(i32** %16, i32* %17, i8* %18, i32 %19, i32* %20)
  store i32 %21, i32* %5, align 4
  br label %25

22:                                               ; preds = %4
  %23 = load i32**, i32*** %6, align 8
  store i32* null, i32** %23, align 8
  %24 = load i32, i32* @AVERROR_PROTOCOL_NOT_FOUND, align 4
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %22, %15
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32* @url_find_protocol(i8*) #1

declare dso_local i32 @url_alloc_for_protocol(i32**, i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
